testsuite/bad/bad056.jl
int main() {
    // Arithmetic operations with cross-types
    double x;
    double y;
    x%y;

    return 0;
}
